--- a/src/main/resources/public/css/style.css
+++ b/src/main/resources/public/css/style.css
@@ -16,7 +16,7 @@
 	padding: 40px 0;
 }
 .landing-page h2 a{
-	background: green;
+	background: blue;
 	color: white;
 	border-radius: 20px;
 }
@@ -48,4 +48,109 @@
   background: rgb(0, 0, 0);
   box-shadow: 0 0 5px rgba(255, 255, 255, 0.24);
   color: white;
+}
+.squad{
+  z-index: 4;
+  position: relative;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.253);
+  justify-content: space-around;
+  text-align: center;
+  flex-wrap: wrap;
+  font-family: 'Abel', sans-serif;
+  font-size: 0.9em;
+}
+.squad>div:nth-child(even){
+	animation: load 1s linear 1;
+}
+#newMember{
+  width: 100%;
+  position: absolute;
+	overflow: auto;
+  left: -100%;
+  height: 85vh;
+  background: rgb(0, 0, 0);
+  z-index: 1000;
+  text-align: center;
+}
+#newMember>p{
+  text-align: right;
+  position: absolute;
+  right: 20px;
+  font-size: 35px;
+  color: red;
+  cursor: pointer;
+}
+.hero-item{
+  width: 500px;
+  max-width: 90%;
+  margin: 2% 3%;
+  position: relative;
+  display: inline-block;
+  text-align: left;
+  padding: 10px;
+  padding: 10px;
+  padding-left: 60px;
+  box-shadow: -10px -10px 10px rgba(255, 255, 255, 0.068);
+  background: rgba(9, 22, 9,0.5);
+  border-radius: 5px;
+}
+.hero-item img{
+position: absolute;
+  height: 70px;
+  background: rgb(9, 22, 13);
+  display: block;
+  padding: 5px 13px;
+  left: -20px;
+  border-radius: 5px;
+  z-index: 4;
+  animation: hero 1s linear 1;
+}
+.hero-item a{
+	background: rgb(6, 70, 6);
+	padding: 3px 20px;
+}
+@keyframes hero{
+  0%{left: -200px;}
+  20%{left: -200px;}
+  50%{left: -100px;}
+  65%{
+    left: -20px;
+    box-shadow: 0px 0px 10px rgb(255, 255, 255);
+  }
+}
+.hero-item button{
+  background: rgb(6, 70, 6);
+  padding: 5px 20px;
+  position: relative;
+  right: -20%;
+  color: white;
+}
+.squad-cont{
+  position: relative;
+  display: inline-block;
+  color: white;
+  width: 500px;
+  max-width: 90%;
+  margin: 1% 2.5%;
+  padding: 20px;
+  background: rgb(2, 2, 2);
+  margin-bottom: 10px;
+  border-radius: 5px;
+  text-align: left;
+  transition: all 2s ease;
+  animation: load1 0.5s linear 1;
+}
+.member-cont{
+  /* background: rgba(255, 255, 255, 0.103); */
+  padding: 10px;
+  border-bottom: 1px solid;
+}
+.member-cont h3{
+  display: inline-block;
+}
+.member-cont .buttons{
+  position: relative;
+  left: 15%;
+  padding: 2px 20px;
 }
