--- a/src/main/resources/templates/hero-form.hbs
+++ b/src/main/resources/templates/hero-form.hbs
@@ -20,7 +20,7 @@
 
             </div>
 
-            <input class="btns" type="submit">
+            <input class="buttons" type="submit">
         </form>
     </section>
 {{/partial}}
