--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -7,14 +7,14 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="/css/style.css">
-        <title>Document</title>
+        <title>Hero Squad</title>
     </head>
 {{/block}}
 
 <body>
 <div class="container">
     <nav class="navbar navbar-expand-lg text-white">
-        <a class="navbar-brand" href="/"><h3><strong><b>HEROES FOR A BETTER PLANET</b></strong></h3></a>
+        <a class="navbar-brand" href="/"><h3><strong><b>HERO SQUAD</b></strong></h3></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
