--- a/src/main/resources/templates/hero.hbs
+++ b/src/main/resources/templates/hero.hbs
@@ -2,13 +2,13 @@
     <section class="landing-pg">
         <div class="land-left">
         </div>
-        <div class="land-right">
+      <div class="land-right">
         </div>
         <h2> <a class="buttons" href="/hero-form" >Create Your Hero</a> <br><br> Current Heroes</h2>
         <div class="heroes">
             {{#each hero}}
                 <div class="hero-item">
-                    <img src="/img/superhero.png" alt="superhero">
+                    <img src="/img/fly.jpg" alt="fly"/>
                     <p>Name: {{ name }} </p>
                     <p>Age: {{ age }}</p>
                     <p>Special power: {{ power }}</p>
