--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -4,11 +4,11 @@
         </div>
         <div class="land-right">
         </div>
-        <div class="hero-img">
-        </div>
+<!--        <div class="hero-img">-->
+<!--        </div>-->
         <div class="hero-desc">
-            <h3>The Real World heroes</h3>
-            <a href="/hero-form"><button class="hero-btn buttons">Create A Hero</button></a>
+            <h3>Super Heroes</h3>
+            <a href="/hero-form"><button class="hero-btn buttons">Create Your Hero</button></a>
         </div>
     </section>
 {{/partial}}
