--- a/src/main/resources/templates/hero.hbs
+++ b/src/main/resources/templates/hero.hbs
@@ -1,5 +1,5 @@
 {{#partial "content"}}
-    <section class="landing-pg">
+    <section class="landing-page">
         <div class="land-left">
         </div>
       <div class="land-right">
@@ -8,7 +8,7 @@
         <div class="heroes">
             {{#each hero}}
                 <div class="hero-item">
-                    <img src="/img/fly.jpg" alt="fly"/>
+                    <img src="/img/bill-gates.jpg" alt="bill-gates"/>
                     <p>Name: {{ name }} </p>
                     <p>Age: {{ age }}</p>
                     <p>Special power: {{ power }}</p>
