--- a/src/main/resources/templates/hero-form.hbs
+++ b/src/main/resources/templates/hero-form.hbs
@@ -1,5 +1,5 @@
 {{#partial "content"}}
-    <section class="landing-pg">
+    <section class="landing-page">
         <div class="land-left"></div>
         <div class="land-right"></div>
         <form class="form" action="/new/hero" method="post">
@@ -17,7 +17,6 @@
             </div>
             <div class="form-group">
                 <input type="text" placeholder="Hero's weakness" name="weakness" required class="form-control">
-
             </div>
 
             <input class="buttons" type="submit">
