--- a/src/main/resources/templates/squad.hbs
+++ b/src/main/resources/templates/squad.hbs
@@ -10,7 +10,7 @@
                 <h2>Choose Squad Members</h2>
                 {{#each heroes}}
                     <div class="hero-item">
-                        <img src="/img/superhero.png" alt="superhero">
+                        <img src="/img/super.jpg" alt="superhero">
                         <div class="hero-detail">
                             <p>Name: {{name}}</p>
                             <p>Super power: {{ power }}</p>
