--- a/src/main/resources/templates/hero.hbs
+++ b/src/main/resources/templates/hero.hbs
@@ -8,7 +8,7 @@
         <div class="heroes">
             {{#each hero}}
                 <div class="hero-item">
-                    <img src="/img/bill-gates.jpg" alt="bill-gates"/>
+                    <img src="/img/super.jpg" alt="Hero"/>
                     <p>Name: {{ name }} </p>
                     <p>Age: {{ age }}</p>
                     <p>Special power: {{ power }}</p>
